--- a/config/database.yml
+++ b/config/database.yml
@@ -29,7 +29,8 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: app
+  # username: app
+  username: postgres
 
   # The password associated with the postgres role (username).
   #password:
